# SWGO-G4

./: README.md
ref/wcd-reff/: CMakeLists.txt  action.cc  construction.cc  generator.cc  generator.hh  run.cc
ref/wcd-reff/buil_HOME/: CMakeCache.txt  Makefile
ref/wcd-reff/wcd_proyect/: CMakeLists.txt
swgo_0/: README.md  README_sw0.md  action.hh  construction.cc  construction.hh  detector.cc  detector.hh  generator.cc  output.root  physics.hh  run.hh  wcd  wcd.cc
swgo_0/buil_HOME/: cmake_install.cmake  wcd
swgo_0/build_HOME/: CMakeCache.txt  Makefile  cmake_install.cmake  wcd
swgo_0/build_ULS/: CMakeCache.txt  Makefile  cmake_install.cmake  swgo_0
